--- a/home.css
+++ b/home.css
@@ -249,7 +249,7 @@ header p{
 /*start of footer*/
 footer{
     margin-top:10px;
-    padding:70px 50px 70px 70px; 
+    padding:10px;
 }
 
 footer li{
@@ -261,7 +261,7 @@ footer h5{
 
 footer .nav a{
     color:grey;
-    font-size: 18px;
+    font-size: 16px;
 }
 footer .nav a:hover{
     color:purple;
@@ -311,7 +311,6 @@ footer .subscribe .btn1{
     z-index:1;
 }
 /*end of footer */
-
 
 
 
