--- a/add_to_cart.css
+++ b/add_to_cart.css
@@ -164,7 +164,7 @@ color: black;
 /*start of footer*/
 footer{
     margin-top:10px;
-    padding:70px 50px 70px 70px; 
+    padding:10px;
 }
 
 footer li{
@@ -176,7 +176,7 @@ footer h5{
 
 footer .nav a{
     color:grey;
-    font-size: 18px;
+    font-size: 16px;
 }
 footer .nav a:hover{
     color:purple;
@@ -226,6 +226,7 @@ footer .subscribe .btn1{
     z-index:1;
 }
 /*end of footer */
+
 @media  screen and (min-width:577px) and (max-width:767px) {
     .middle-top h3{
         font-size: 18px;
