--- a/checkout.css
+++ b/checkout.css
@@ -118,9 +118,10 @@ color: black;
 
 /*end of info*/
 /*start of footer*/
+/*start of footer*/
 footer{
     margin-top:10px;
-    padding:70px 50px 70px 70px; 
+    padding:10px;
 }
 
 footer li{
@@ -132,7 +133,7 @@ footer h5{
 
 footer .nav a{
     color:grey;
-    font-size: 18px;
+    font-size: 16px;
 }
 footer .nav a:hover{
     color:purple;
@@ -182,6 +183,7 @@ footer .subscribe .btn1{
     z-index:1;
 }
 /*end of footer */
+
 /*start of media screen*/ 
 @media  screen and (max-width:576px) {
     .middle-top h3{
