--- a/single_product.css
+++ b/single_product.css
@@ -148,11 +148,10 @@ header .btn:hover{
     font-weight: 700;
 }
 /*end of featured products section*/
-
 /*start of footer*/
 footer{
     margin-top:10px;
-    padding:70px 50px 70px 70px; 
+    padding:10px;
 }
 
 footer li{
@@ -164,7 +163,7 @@ footer h5{
 
 footer .nav a{
     color:grey;
-    font-size: 18px;
+    font-size: 16px;
 }
 footer .nav a:hover{
     color:purple;
@@ -214,7 +213,6 @@ footer .subscribe .btn1{
     z-index:1;
 }
 /*end of footer */
-
 
 
 
