--- a/about.css
+++ b/about.css
@@ -198,11 +198,17 @@ footer .subscribe .btn1{
     .bottom-nav .nav-link{
         font-size:10px;
     }
-}
-footer .nav a{
 
-font-size:16px;
+    footer .nav a{
+
+        font-size:16px;
+        }
+        .team-section hr{
+            
+            margin-left:44%;
+        }       
 }
+
 @media  screen and (min-width:577px) and (max-width:767px) {
     .middle-top h3{
         font-size: 18px;
@@ -216,9 +222,16 @@ font-size:16px;
     .bottom-nav .nav-link{
         font-size:14px;
     }
+    .team-section hr{
+            
+        margin-left:45%;
+    }
 }
 @media  screen and (min-width:768px) and (max-width:992px) {
-
+    .team-section hr{
+            
+        margin-left:47%;
+    }
 }
 
 @media  screen and (min-width:992px) and (max-width:1200px) {
